--- a/backend/user/pom.xml
+++ b/backend/user/pom.xml
@@ -54,6 +54,10 @@
 			<version>6.2.3</version>
 		</dependency>
 		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-core</artifactId>
+			</dependency>
+		<dependency>
     <groupId>io.jsonwebtoken</groupId>
     <artifactId>jjwt-api</artifactId>
     <version>0.11.2</version>
